# DicomAnonymizer

./: CMakeLists.txt  dcmanon.cpp  dcmanon.h  dcostrmpp.cc  dcostrmpp.h  dcostrms.cc  executer.cpp
node-wrapper/: README.md  app.ts  dicomanon.ts  package-lock.json  package.json  tsconfig.json
